--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,68 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+/* Custom styles for login page */
+.login-container {
+    background-color: white;
+    padding: 4rem;
+    border-radius: 0.5rem;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+    max-width: 28rem;
+    width: 100%;
+    min-height: 28rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: auto;
+    margin-top: 2.5rem; /* Adjust the value to slide it further down */
+}
+
+
+.login-title {
+    font-size: 1.875rem; /* text-3xl */
+    font-weight: 700; /* font-bold */
+    text-align: center;
+    color: #4a5568; /* text-gray-700 */
+    margin-bottom: 1.5rem; /* mb-6 */
+}
+
+.login-input {
+    width: 100%;
+    padding: 0.5rem;
+    border: 1px solid #e2e8f0; /* border-gray-300 */
+    border-radius: 0.375rem; /* rounded-md */
+    margin-top: 0.25rem;
+}
+
+
+.login-button {
+    width: 100%;
+    background-color: #4299e1; /* bg-blue-500 */
+    color: white;
+    padding: 0.75rem;
+    border-radius: 0.375rem; /* rounded-md */
+    font-weight: 600; /* font-semibold */
+    text-align: center;
+    transition: background-color 0.2s ease;
+    margin-top: 1rem; /* mt-4 */
+}
+
+.login-button:hover {
+    background-color: #2b6cb0; /* bg-blue-700 */
+}
+
+.register-text {
+    color: #4299e1; /* text-blue-500 */
+}
+
+.text-success {
+    color: #28a745; /* Green color for success */
+    font-weight: bold;
+}
+
+.text-danger {
+    color: #8d0905; /* red color for denger */
+    font-weight: bold;
+}
+
